<?xml version="1.0"?>
<package format="3">
  <name>ros2autodoc</name>
  <version>2.1.2</version>
  <description>
    The ROS2 autodoc project provides a CLI command to automatically generate ROS-Wiki-style documentation template nodes in markdown syntax.
  </description>
  <maintainer email="mohamed.abdelaziz@tutanota.de">Mohamed Abdelaziz</maintainer>
  <license>BSD-3-Clause</license>

  <depend>ros2cli</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
